# clawdbot

./: .env.atlas.example  .env.example  .gitignore  .gitmodules  .oxfmtrc.jsonc  .oxlintrc.json  .pre-commit-config.yaml  .prettierignore  .secrets.baseline  AGENT.md  AGENTS.md  ASI-Manifest-Sovereign.ps1  CHANGELOG.md  CLAWBOOK_README.md  CONTRIBUTING.md  CUsersdownl.openclawopenclaw.json  Dockerfile  EVOLUTION.md  GOAL.md  HEARTBEAT.md  LINE_SETUP_GUIDE.md  MEMORY.md  MODEL_CARD.md  Modelfile_HakuaCore2  OpenClaw-Launcher.ps1  POSTGRESQL_SETUP_GUIDE.md  README.md  RIEMANN_TRANSCEIVER.md  SECURITY.md  SOUL.md  STARTUP_GUIDE.md  aggressive_clean.py  agi-tailscale-auto.bat  appcast.xml  approve-pairing.bat  auto-healing-setup.bat  auto-line.cjs  auto-pairing-monitor.bat  auto-setup-complete.bat  auto-setup-full.mjs  (+124 more)
.gemini/: settings.json
.git-rewrite/: backup-refs  commit  heads  index  message  parse  revs
.github/: labeler.yml
.openclaw/: openclaw.json
.openclaw-desktop/: README.md  gateway.cmd  openclaw.json  openclaw.json.bak  openclaw.json.bak.1  openclaw.json.bak.2  openclaw.json.bak.3  openclaw.json.bak.4  update-check.json
_artifacts/: README.md
_docs/: 2026-01-29_typescript-type-fixes.md  2026-01-29_unified-install-scripts.md  2026-01-29_vrchat_integration.md  (+295 more)
brain/: HEARTBEAT.md  (+2 more)
evolution-py/: autonomous_train.py  heartbeat_evolution.py  ollama_manager.py  pyproject.toml  test_ollama.py  train_model.py  voice_assistant.py
evolution-py/memory/: latest_research.json
evolution-py/src/evolution/: __init__.py  autonomous_train.py  core.py  deep_research.py  distillation.py  gpu.py  ollama_client.py  search.py  system.py  voice.py
scripts/hypura/: README.md  code_runner.py  density_metrics.json  harness.config.json  harness_daemon.py  hypura_skill.md  lora_trainer.py  manifest_directive.json  osc_controller.py  osc_param_map.json  pyproject.toml  shinka_adapter.py  shinka_monitor.py
scripts/hypura/tests/: test_code_runner.py  test_harness_daemon.py  test_shinka_adapter.py  test_skill_generator.py  test_voicevox_sequencer.py
(+5583 files in other folders)
