[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openclaw-evolution"
version = "1.0.0"
description = "ShinkaEvolve-style autonomous evolution system for OpenClaw"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "OpenClaw Team", email = "team@openclaw.ai"}
]
keywords = ["ai", "evolution", "genetic-algorithm", "llm", "openclaw"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=2.0.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://openclaw.ai"
Documentation = "https://docs.openclaw.ai"
Repository = "https://github.com/openclaw/openclaw"
Issues = "https://github.com/openclaw/openclaw/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
