# scripts/hypura/pyproject.toml
[project]
name = "hypura-harness"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "python-osc>=1.8.3",
    "sounddevice>=0.4.6",
    "soundfile>=0.12.1",
    "httpx>=0.27.0",
    "filelock>=3.13.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
